RESOLVED FIXED302130
Video Viewer UI elements overlapping and exits unexpectedly when using media controls
https://bugs.webkit.org/show_bug.cgi?id=302130
Summary Video Viewer UI elements overlapping and exits unexpectedly when using media ...
phinehas133
Reported 2025-11-06 15:48:52 PST
see title
Attachments
phinehas133
Comment 1 2025-11-06 15:48:54 PST
phinehas133
Comment 2 2025-11-06 15:51:55 PST
EWS
Comment 3 2025-11-19 08:53:53 PST
Committed 303256@main (ae855de5413d): <https://commits.webkit.org/303256@main> Reviewed commits have been landed. Closing PR #53565 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.