Video Viewer UI elements overlapping and exits unexpectedly when using media controls https://bugs.webkit.org/show_bug.cgi?id=302130 rdar://164051864

Reviewed by Andy Estes.

Added proper left positioning using --inline-controls-inside-margin to
ensure the top-left controls stay in their designated position and don't
interfere with the volume slider container.

* Source/WebCore/rendering/cocoa/RenderThemeCocoa.mm:
(WebCore::macOSInlineMediaControlsStyleSheet):

Canonical link: https://commits.webkit.org/303256@main